# cinepaint-oyranos

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  cinepaint-gtk.pc  cinepaint-gtk.pc.in  cinepaint.1  cinepaint.desktop  cinepaint.m4  cinepaint.spec  cinepaint.spec.in  cinepainttool.1  cinepainttool.in  configure  configure.in  gimprc.in  gimprc_user.in  gtkrc  mkinstalldirs  printrc_user  spot.icon.xpm  spot.splash.ppm  tips.txt  user_install.in
app/: Makefile.am  Makefile.in  about_dialog.c  airbrush.c  airbrush.h  app_procs.c  app_procs.h  appenv.h  apptypes.h  base_frame_manager.c  base_frame_manager.h  batch.c  blend.c  boundary.h  brush.c  brush.h  brush_edit.c  brush_edit.h  brush_header.h  brushgenerated.h  brushlist.c  brushlist.h  brushlistF.h  brushlistP.h  bucket_fill.c  bugs_dialog.c  bugs_dialog.h  buildmenu.c  buildmenu.h  by_color_select.c  canvas.c  canvas.h  channel.h  channel_cmds.c  channel_ops.c  channel_pvt.h  channels_dialog.c  cinepaint-remote.c  clone.c  clone.h  (+217 more)
app/buttons/: area.xpm  area_is.xpm  backwards.xpm  backwards_is.xpm  forward.xpm  forward_is.xpm  ibg.xbm  ifg.xbm  iflip.xbm  isave.xbm  istep.xbm  look_profile_apply.xpm  look_profile_apply_all.xpm  look_profile_on.xpm  look_profile_open.xpm  picker_black  picker_black.xpm  picker_black_is.xpm  picker_gray  picker_gray.xpm  picker_gray_is.xpm  picker_mask  picker_white  picker_white.xpm  picker_white_is.xpm  play_backwards.xpm  play_backwards_is.xpm  play_forward.xpm  play_forward_is.xpm  stop.xpm  stop_is.xpm  update.xpm  update_is.xpm
app/depth/: Makefile.am  Makefile.in  bezier_select.c  bezier_select.h  bezier_selectP.h  bfp.h  boundary.c  brightness_contrast.c  brush_select.c  brush_select.h  brushgenerated.c  channel.c  color_balance.c  color_picker.c  color_select.c  colormaps.c  commands.c  curves.c  desaturate.c  displaylut.c  displaylut.h  dodgeburn.c  equalize.c  float16.h  free_select.c  gamma_expose.c  histogram.c  hue_saturation.c  image_render.c  info_window.c  invert.c  layer.c  levels.c  paint_core_16.c  paint_funcs_area.c  paint_funcs_row_bfp.c  paint_funcs_row_bfp.h  paint_funcs_row_float.c  paint_funcs_row_float.h  paint_funcs_row_float16.c  (+13 more)
data/: Makefile.am  Makefile.in
data/brushes/: 10x10squareBlurf16.gbr  10x10squaref16.gbr  11circlef16.gbr  11fcirclef16.gbr  13circlef16.gbr  13fcirclef16.gbr  15circlef16.gbr  15fcirclef16.gbr  17circlef16.gbr  17fcirclef16.gbr  19circlef16.gbr  19fcirclef16.gbr  1circlef16.gbr  20x20squareBlurf16.gbr  20x20squaref16.gbr  30x30twinklef16.gbr  3circlef16.gbr  3fcirclef16.gbr  5circlef16.gbr  5fcirclef16.gbr  5x5squareBlurf16.gbr  5x5squaref16.gbr  7circlef16.gbr  7fcirclef16.gbr  9circlef16.gbr  9fcirclef16.gbr  Makefile.am  Makefile.in  NS1-Charcoal01.gbr  NS1-Charcoal02.gbr  NS1-Charcoal03.gbr  NS1-Charcoal04.gbr  NS1-Charcoal05.gbr  NS1-Charcoal06.gbr  NS1-Charcoal07.gbr  NS1-Charcoal08.gbr  NS1-Charcoal09.gbr  NS1-Charcoal10.gbr  NS1-Charcoal11.gbr  NS1-Charcoal12.gbr  (+63 more)
data/curves/: D100ev0  DavidFmidtoneBoostA  EV3-4.0  FG_baseline_conservative_v3  FG_baseline_v3  FG_ev3_v2  FG_ev3_v3  FG_ev3_v34  FG_ev5_v2  FG_ev5_v3  FG_point_and_shoot  FG_point_and_shoot_conservative_v31  FG_point_and_shoot_conservative_v32  FG_point_and_shoot_v31  FG_point_and_shoot_v32  FG_provia_v3  FG_provia_v31  FG_provia_v32  FG_provia_v33  FG_provia_v40  FG_white_wedding_v3  FG_white_wedding_v32  FG_white_wedding_v33  FG_white_wedding_v34  FG_white_wedding_v35  FGs_Provia_v34  Fotogenic_Provia_v3.3  JTs_All_In_One  KGM_Agfa_Optima  KGM_fotogenetic_ev3_v34_5  KGM_fotogenetic_ev3_v34_6  KGM_fotogenetic_ev3_v43  KGM_oldskools_mtb_v1_3  Klaus_1  Klaus_2  Klaus_3  Makefile.am  Makefile.in  OldSkoOLs_Midtone_Enhance_v3h  OldSkoOLs_Normal_v2  (+66 more)
data/gradients/: Makefile.am  Makefile.in
data/palettes/: Makefile.am  Makefile.in
data/patterns/: Makefile.am  Makefile.in
lib/: Makefile.am  Makefile.in  chainbutton.c  chainbutton.h  channel.c  channelops_pdb.c  channelops_pdb.h  compat.h  config.h  config.h.in  convert_pdb.c  convert_pdb.h  dialog.c  dialog.h  display.c  dll_api.h  drawable.c  edit_pdb.c  edit_pdb.h  export.c  export.h  fileops_pdb.c  fileops_pdb.h  fl_i18n_cinepaint.h  float16.h  gradient.c  guides_pdb.c  guides_pdb.h  helpui.c  helpui.h  image.c  image_convert.c  image_convert.h  image_pdb.c  image_pdb.h  intl.h  matrix.c  menu.c  menu.h  palette.c  (+26 more)
lib/fl_i18n/: Makefile.am  Makefile.in  README  fl_i18n_cinepaint.cxx  threads.h
lib/wire/: Makefile.am  Makefile.in  c_typedefs.h  datadir.c  datadir.h  dl_list.c  dl_list.h  enums.h  event.c  event.h  iodebug.c  iodebug.h  libtile.c  libtile.h  precision.h  protocol.c  protocol.h  taskswitch.c  taskswitch.h  wire.c  wire.h  wire_types.h  wirebuffer.c  wirebuffer.h
libgimp/: Makefile.am  Makefile.in  gimp.h  gimp1.2.h  gimpcompat.h  gimpintl.h  gimpintl.h.in  gimpmath.h  gimpui.h  stdplugins-intl.h
libhalf/: Makefile.am  Makefile.in  cinepaint_half.cpp  cinepaint_half.h
plug-ins/: Makefile.am  Makefile.in
plug-ins/blur/: Makefile.am  Makefile.in  blur.c
plug-ins/bmp/: Makefile.am  Makefile.in  bmp.c  bmp.h  bmpread.c  bmpwrite.c
plug-ins/bracketing_to_hdr/: AUTHORS  Doxyfile  FILES  Makefile.am  Makefile.in  NEWS  README  TODO  bracketing_to_hdr.cpp  bracketing_to_hdr.hpp
plug-ins/cineon/: Makefile.am  Makefile.in  cineon.c  cineonTest.c  cineonfile.h  cineonlib.c  cineonlib.h  dpxlib.c  dpxlib.h  logImageCore.c  logImageCore.h  logImageLib.c  logImageLib.h
plug-ins/collect/: Makefile.am  Makefile.in  collect.cpp
plug-ins/compose/: Makefile.am  Makefile.in  compose.c
plug-ins/dbbrowser/: Makefile.am  Makefile.in  dbbrowser.c  dbbrowser.h  dbbrowser_utils.c  dbbrowser_utils.h
plug-ins/decompose/: Makefile.am  Makefile.in  decompose.c
plug-ins/dicom/: Makefile.am  Makefile.in  dicom.c
plug-ins/edge/: Makefile.am  Makefile.in  edge.c
plug-ins/fits/: Makefile.am  Makefile.in  fits.c  fitsrw.c  fitsrw.h
plug-ins/gauss_rle/: Makefile.am  Makefile.in  gauss_rle.c
plug-ins/gbr/: Makefile.am  (+2 more)
(+628 files in other folders)
